<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:layout_marginTop="20dp"
            android:textSize="28sp"
            android:textColor="@color/dark_blue_2"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_line3"
            android:layout_marginTop="15dp"
            android:textSize="19sp"
            android:textColor="@color/dark_blue_2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            app:layout_constraintEnd_toEndOf="parent"
            app:helperTextTextColor="@color/dark_blue_2"
            app:helperText="Minimum 6 Digits"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logIn"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingVertical="15dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue_2"
            android:text="@string/log_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/view2"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="#BC7B29" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="5dp"
                android:text="@string/or_with" />

            <View
                android:id="@+id/view3"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="#BC7B29" />

        </LinearLayout>

        <TextView
            android:id="@+id/googleSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:gravity="center"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="@string/google"
            android:textColor="@color/dark_blue_2"
            android:textSize="22sp"
            app:drawableLeftCompat="@drawable/google" />


        <TextView
            android:id="@+id/OpenSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/dark_blue_2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>