<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stay_connected"
            android:textSize="28sp"
            android:textColor="@color/dark_blue_2"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_line2"
            android:layout_marginTop="15dp"
            android:textSize="19sp"
            android:textColor="@color/dark_blue_2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            app:layout_constraintEnd_toEndOf="parent"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:helperTextTextColor="@color/dark_blue_2"
            app:helperText="Minimum 6 Digits"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ConfirmPasswordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            app:layout_constraintEnd_toEndOf="parent"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingVertical="15dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue_2"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/OpenLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/dark_blue_2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>