<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/make_your_body_n_healthy_amp_fit"
        android:textColor="#0E5611"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/text_1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="120dp"
        app:cornerRadius="10dp"
        android:text="@string/start"
        />

</RelativeLayout>